--- a/package.json
+++ b/package.json
@@ -5,22 +5,44 @@
   "main": "server/index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack",
+    "build": "webpack --watch",
     "start": "nodemon ./server/index.js"
   },
   "author": "RBK Tunisia",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "@brainhubeu/react-carousel": "^1.19.26",
+    "@material-ui/core": "^4.11.3",
+    "@types/styled-components": "^5.1.7",
+    "axios": "^0.21.1",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
+    "install": "^0.13.0",
     "jest": "^22.3.0",
     "morgan": "^1.9.0",
+    "nodemon": "^2.0.7",
+    "npm": "^7.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.11.0"
+    "react-elastic-carousel": "^0.11.1",
+    "react-modal": "^3.12.1",
+    "react-slick": "^0.28.0",
+    "react-star-ratings": "^2.3.0",
+    "reactjs-popup": "^2.0.4",
+    "redux": "^4.0.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.9",
+    "@babel/preset-env": "^7.13.8",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   }
 }
